--- a/8-Model-evaluation.qmd
+++ b/8-Model-evaluation.qmd
@@ -143,7 +143,17 @@ train_set = droplevels(train_set)
 test_set  = droplevels(test_set)
 
 # Prepare categorical features using one-hot encoding
-categorical_features = c("gender", "education", "marital", "income", "card_category")
+train_set$income_rank <- as.numeric(factor(train_set$income, 
+  levels = c("<40K", "40K-60K", "60K-80K", "80K-120K", ">120K"), 
+  labels = c(20, 50, 70, 100, 140)
+))
+
+test_set$income_rank <- as.numeric(factor(test_set$income, 
+  levels = c("<40K", "40K-60K", "60K-80K", "80K-120K", ">120K"), 
+  labels = c(20, 50, 70, 100, 140)
+))
+
+categorical_features = c("gender", "education", "marital", "card_category")
 
 train_onehot = one.hot(train_set, cols = categorical_features)
 test_onehot  = one.hot(test_set,  cols = categorical_features)
@@ -163,8 +173,8 @@ test_scaled  = minmax(test_onehot,  col = numeric_features, min = min_train, max
 # Apply kNN model
 formula = churn ~ gender_female + age + 
     education_uneducated + education_highschool + education_college + education_graduate +
+    income_rank +
     `education_post-graduate` + marital_married + marital_single +
-    `income_<40K` + `income_40K-60K` + `income_60K-80K` + `income_80K-120K` + 
     card_category_blue + card_category_silver + card_category_gold +
     dependent_count + months_on_book + relationship_count + months_inactive +
     contacts_count_12 + credit_limit + revolving_balance + transaction_amount_12 +
